# mosaic-sdk

./: .env.development  .env.mosaicstack  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITEA-SETUP.md  LICENSE  README.md  UPGRADE_SUMMARY.md  docker-compose.mosaicstack.yml  docker-compose.portainer.yml  package-lock.json  package.json  test-tony-mcp-simple.cjs
.claude/: settings.json
.claude/commands/: init.md  mcp-test.md  tony-mcp-upgrade.md  tony28.md
.claude/hooks/: pre-tool-check.sh
.git-hooks/: README.md  commit-msg  install-hooks.sh  pre-commit  pre-push  uninstall-hooks.sh
.mosaic/: AGENT-QUICK-REFERENCE.md  CRITICAL-READ-FIRST.md  DOCUMENTATION-RULES.md  FIX-BUILD-ERRORS.md  TONY-2.8.0-MCP-MANDATORY.md  mcp.pid  remote-config.json  stack.config.json  start-isolated-mcp.js  start-mcp.sh  version-matrix.json
.woodpecker/: sync-docs.yml
docs/: EPIC-E.055-BREAKDOWN.md  README.md  version-roadmap.md
postgres/: postgresql.conf
scripts/: analyze-old-docs.py  create-optimized-structure.py  dev-environment.sh  fix-doc-issues.py  migrate-doc-structure.py  migrate-to-opt.sh  mosaic  prepare-mosaic.sh  setup-host-filesystem.sh  sync-to-bookstack.py  systematic-migration.py  test-bookstack-sync.sh  test-mcp.js  validate-bookstack-structure.py  verify-structure.js
templates/: README.md
tests/: HANDOFF-AGENT-8.md  README.md  jest.config.js  setup.ts  test-full-stack.sh  test-mcp-integration.sh  test-tony-coordination.sh
tests/ci-cd-validation/python/: .woodpecker.yml  Dockerfile  pyproject.toml  requirements.txt
tests/ci-cd-validation/python/app/: __init__.py  calculator.py  main.py  models.py
tests/ci-cd-validation/python/tests/: __init__.py  test_api.py  test_calculator.py
tools/: README.md
(+799 files in other folders)
